header section complate

--- a/index.html
+++ b/index.html
@@ -8,11 +8,36 @@
    <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
    <!-- CSS -->
    <link rel="stylesheet" href="styles/style.css">
+   <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/6bfd25a210.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- header -->
   <header>
+     <!-- Navbar -->
+     <div class="navbar">
+      <h3>Ba<span class="dh">d</span>s<span class="dh">h</span>a</h3>
+      <nav>
+        <ul>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <button class="btn">Hire Me..<i class="fa-solid fa-street-view"></i></button>
+        </ul>
+      </nav>
+     </div>
 
+    <!-- header title -->
+    <div class="img">
+      <div class="head-description">
+        <h4>Hi, I am</h4>
+        <h2>Bayzid Azam Badsha</h2>
+        <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved
+          moments.</p>
+        <button class="btn"><i class="fa-regular fa-circle-down"></i> Download CV</button>
+        <button class="btn"> <i class="fa-solid fa-phone-volume"></i> Contact Me</button>
+      </div>
+      <img src="images/bayzid_title.png" alt="">
+    </div>
   </header>
   <!-- Main -->
   <main>
@@ -20,7 +45,7 @@
   </main> 
   <!-- footer -->
   <footer>
-    
+
   </footer>
 </body>
 </html>
