--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
    <link rel="stylesheet" href="styles/style.css">
    <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/6bfd25a210.js" crossorigin="anonymous"></script>
+  <!-- Google Font  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Belanosima:wght@700&family=DM+Sans:wght@700&family=Open+Sans:wght@700&display=swap"
+    rel="stylesheet">
 </head>
 <body>
   <!-- header -->
@@ -41,6 +47,69 @@
   </header>
   <!-- Main -->
   <main>
+      <!-- about me  -->
+<div class="about">
+        <h1>About Me</h1>
+        <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that
+        provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me.
+        Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <div class="address">
+          <div class="name">
+            <p>Name :
+            <h4>Bayzid Azam Badsha</h4>
+            </p>
+          </div>
+          <div class="name">
+            <p>Email :
+            <h4>badshaofficial007"gmail.com</h4>
+            </p>
+          </div>
+          <div class="name">
+            <p>Date Of Birth :
+            <h4>5th March 2001</h4>
+            </p>
+          </div>
+          <div class="name">
+            <p>From :
+            <h4>Panchagarh, Bangladesh</h4>
+            </p>
+          </div>
+        </div>  
+</div>
+<!-- What i Do  -->
+    <div class="work">
+      <h1>What I do</h1>
+      <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my
+      main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume
+      and project portfolio.</p>
+    </div>
+    <div class="my_work">
+      <div class="subject">
+        <img class="icon" src="images/icons/js.png" alt="Vanilla JavaScript">
+        <h4>Vanilla JavaScript</h4>
+        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+        Aenean commodo ligula eget dolor.</p>
+      </div>
+      <div class="subject">
+        <img class="icon" src="images/icons/mongo.png" alt="">
+        <h4>MongoDB</h4>
+        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+        Aenean commodo ligula eget dolor.</p>
+      </div>
+      <div class="subject">
+        <img class="icon" src="images/icons/react.png" alt="">
+        <h4>React</h4>
+        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+        Aenean commodo ligula eget dolor.</p>
+      </div>
+      <div class="subject">
+        <img class="icon" src="images/icons/nodejs.png" alt="">
+        <h4>Node.js</h4>
+        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+        Aenean commodo ligula eget dolor.</p>
+      </div>
+
+    </div>
 
   </main> 
   <!-- footer -->
