--- a/index.html
+++ b/index.html
@@ -114,7 +114,25 @@
   </main> 
   <!-- footer -->
   <footer>
-
+   <div class="foot">
+    <div class="contact">
+      <h3>Lets Connect</h3>
+      <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through
+      Friday.</p>
+      <div class="icon2">
+       <img src="images/icons/twitter.png" alt="" class="icon">
+       <img src="images/icons/facebook.png" alt="" class="icon">
+       <img src="images/icons/insta.png" alt="" class="icon">
+      </div>
+    </div>
+    <div class="form">
+      <h3>Let’s Message me...</h3>
+      <input type="text" placeholder="Your Name" name="" id="">
+      <input type="email" placeholder="Your Mail" name="" id="">
+      <textarea placeholder="Your Message" name="" id=""cols="30" rows="10"></textarea>
+      <button class="btn" >Submit</button>
+    </div>
+   </div>
   </footer>
 </body>
 </html>
